--- a/armonitor-web/src/main/resources/templates/buildDeployed/subject_en.html
+++ b/armonitor-web/src/main/resources/templates/buildDeployed/subject_en.html
@@ -1,1 +1,1 @@
-[Deployed] The ${StoreSystem.application.name} was deployed on the system ${StoreSystem.name}
+[Deployed] The ${StoreSystem.application.name} was deployed on the ${StoreSystem.name} system.
