--- a/armonitor-web/src/main/resources/templates/buildDeployed/content_en.html
+++ b/armonitor-web/src/main/resources/templates/buildDeployed/content_en.html
@@ -4,13 +4,21 @@
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
   </head>
   <body>
+	<!--
+		Mail: ${Mail.guid}
+		StoreSystemBuild: ${StoreSystemBuild.guid}
+		StoreSystem: ${StoreSystem.guid}
+		StoreBuild: ${StoreBuild.guid}
+		StoreApplication: ${StoreApplication.guid}
+		StoreProject: ${StoreProject.guid}
+	-->
     <div id="body" style="font-family:Helvetica, Arial, sans-serif;font-size:16px;color:#808080;width:800px;margin:0 auto">
 	  <table background="" style="padding:0px;border:0px;width:100%;color:#606060;font-size:20px;margin-bottom:15px;margin-top:15px;">
         <tr style="padding:0px;border:0px;">
           <td style="padding:0px;border:0px;vertical-align:middle">
 			  <span style="vertical-align:middle;margin-left:3px">
 				<strong>
-					${StoreSystem.application.name}
+					${StoreApplication.name}
 				</strong> (${StoreSystem.name})
 			  </span>
 		  </td>
@@ -43,33 +51,118 @@
             <tbody style="margin-bottom:40px">
               <tr style="padding:0px;border:0px">
                 <td colspan="2" style="border:0px;height:20px;width:200px;padding:0px;padding-top:20px;padding-bottom:5px;text-align:right;border-left:1px solid #adadad;border-right:1px solid #adadad;">					
-					<table style="width:100%">
+					<table style="padding:0px;border:0px;width:100%;border-spacing:0">
 						<tbody>
 							
+							<#list ChangeReport.errors as change>
+								<tr style="background-color:#ffdedf;">
+									<td align="left" style="border:0px;color:#808080;padding:0px;height:20px;font-size:12px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+										<span style="text-decoration:none;font-weight:bold;color:#FF0000;font-size:14px;" >!</span>
+									</td>
+									<td align="left" style="width:100px;border:0px;padding:0px;height:20px;text-decoration:none;font-weight:bold;color:#670C07;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+										<a href="${StoreProject.bts.link}${change.id}" style="text-decoration:none;font-weight:bold;color:#670C07;font-size:14px;">
+											${change.id}
+										</a> 									
+									</td>																																
+									<td align="left" style="width:100px;border:0px;color:#670C07;padding:0px;height:20px;font-size:14px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+									<#if change.issue??>
+										<strong>${change.issue.resolution!""}</strong>
+									<#else>	
+										<strong></strong>
+									</#if>
+									</td>	
+									<td align="left" style="width:100px;border:0px;color:#808080;padding:0px;height:20px;font-size:12px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+									<#if change.issue??>
+										${change.issue.assignee!""}
+									<#else>	
+										<strong></strong>
+									</#if>
+									</td>								
+									<td align="left" style="border:0px;color:#808080;padding:0px;height:20px;font-size:12px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+									<#if change.issue??>
+										${change.issue.summary!""}
+									<#else>	
+										<strong>This is not valid issue id!</strong>
+									</#if>
+									</td>							
+								</tr>
+								<#list change.scmLogs as log>
+								<tr>
+									<td colspan="2" align="left"> </td>
+									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
+										<span style="text-decoration:none;font-size:10px;" >${log.date?datetime?string("dd-MM-yyyy hh:mm")}</span>
+									</td>
+									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
+										<span style="text-decoration:none;font-size:10px;" >${log.user}</span>
+									</td>									
+									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
+										<span style="text-decoration:none;font-size:10px;" >${log.id}: ${log.message}</span>
+									</td>
+								</tr>
+								</#list>
+							</#list>
+							
 							<#list ChangeReport.changes as change>
-							<tr>
-								<td align="left" style="border:0px;padding:0px;height:20px;text-decoration:none;font-weight:bold;color:#57769d;padding-bottom:2px;padding-top:2px;padding-left:2px;">
-									<a href="${StoreProject.bts.link}${change.id}" style="text-decoration:none;font-weight:bold;color:#57769d;font-size:14px;">
+							<tr style="background-color:#d7f5d6;">
+								<td align="left" style="border:0px;color:#808080;padding:0px;height:20px;font-size:12px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+								</td>							
+								<td align="left" style="width:100px;border:0px;padding:0px;height:20px;text-decoration:none;font-weight:bold;color:#670C07;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+									<a href="${StoreProject.bts.link}${change.id}" style="text-decoration:none;font-weight:bold;color:#670C07;font-size:14px;">
 										${change.id}
 									</a> 									
 								</td>																																
-								<td align="left" style="border:0px;color:#808080;padding:0px;height:20px;font-size:14px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
-									<strong>${change.issue.resolution!""}</strong>
+								<td align="left" style="width:100px;border:0px;color:#670C07;padding:0px;height:20px;font-size:14px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+									<#if change.issue??>
+										<strong>${change.issue.resolution!""}</strong>
+									<#else>	
+										<strong></strong>
+									</#if>
 								</td>	
-								<td align="left" style="border:0px;color:#808080;padding:0px;height:20px;font-size:12px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
-									${change.issue.assignee!""}
+								<td align="left" style="width:100px;border:0px;color:#808080;padding:0px;height:20px;font-size:12px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+									<#if change.issue??>
+										${change.issue.assignee!""}
+									<#else>	
+										<strong></strong>
+									</#if>
 								</td>								
 								<td align="left" style="border:0px;color:#808080;padding:0px;height:20px;font-size:12px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
-									${change.issue.summary!""}
+									<#if change.issue??>
+										${change.issue.summary!""}
+									<#else>	
+										<strong>This is not valid issue id!</strong>
+									</#if>
 								</td>							
 							</tr>
+								<#list change.scmLogs as log>
+								<tr>
+									<td colspan="2" align="left"> </td>
+									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
+										<span style="text-decoration:none;font-size:10px;" >${log.date?datetime?string("dd-MM-yyyy hh:mm")}</span>
+									</td>
+									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
+										<span style="text-decoration:none;font-size:10px;" >${log.user}</span>
+									</td>									
+									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
+										<span style="text-decoration:none;font-size:10px;" >${log.id}: ${log.message}</span>
+									</td>
+								</tr>
+								</#list>							
 							</#list>
+							<#if ChangeReport.errors?has_content>
+							<tr>
+									<td colspan="5" align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
+										<span style="text-decoration:none;font-weight:bold;color:#FF0000;font-size:14px;" >!</span>
+										<span style="text-decoration:none;color:#FF0000;font-size:10px;" >This issues are not planned for this release!</span>
+									</td>
+							</tr>
+							</#if>
 						</tbody>
 					</table>
 				</td>
               </tr>
               <tr style="padding:0px;border:0px">
-                <td colspan="2" style="border:0px;width:100%;height:10px;padding:0px;border-left:1px solid #adadad;border-bottom-left-radius:5px;border-bottom:1px solid #adadad;border-right:1px solid #adadad;border-bottom-right-radius:5px"> </td>
+                <td colspan="2" style="border:0px;width:100%;height:1px;padding:0px;border-left:1px solid #adadad;border-bottom-left-radius:5px;border-bottom:1px solid #adadad;border-right:1px solid #adadad;border-bottom-right-radius:5px"> 
+				</td>
               </tr>				
               </tbody>
           </table>
@@ -78,8 +171,11 @@
 
       <div style="padding-top: 10px; width: 800px">
         <div style="font-size:12px;text-align:center;vertical-align:middle;height:20px;width:800px">
-          <p style="color:#808080;margin-top:10px"> 
-            <span style="vertical-align:middle">Application release monitor is powered by </span><a href="http://www.lorislab.org" style="text-decoration:underline"><img src="${MailConfig.url}/${Mail.template}/logo.png" style="vertical-align:middle"></a>
+          <p style="color:#808080;margin-top:10px;"> 
+            <span style="vertical-align:middle">Application release monitor is powered by </span>
+			<a href="http://www.lorislab.org" style="text-decoration:none;">
+			<span style="font-weight:bold;color:#32a32d;font-size:14px;text-decoration:none;">lorislab</span><span style="font-weight:bold;color:#000000;font-size:14px;text-decoration:none;">.org</span>
+			</a>
           </p>
         </div>
       </div>
