--- a/armonitor-web/src/main/resources/templates/buildDeployed/content_en.html
+++ b/armonitor-web/src/main/resources/templates/buildDeployed/content_en.html
@@ -12,7 +12,7 @@
 		StoreApplication: ${StoreApplication.guid}
 		StoreProject: ${StoreProject.guid}
 	-->
-    <div id="body" style="font-family:Helvetica, Arial, sans-serif;font-size:16px;color:#808080;width:800px;margin:0 auto">
+    <div id="body" style="font-family:Helvetica, Arial, sans-serif;font-size:16px;color:#808080;width:90%;margin:0 auto">
 	  <table background="" style="padding:0px;border:0px;width:100%;color:#606060;font-size:20px;margin-bottom:15px;margin-top:15px;">
         <tr style="padding:0px;border:0px;">
           <td style="padding:0px;border:0px;vertical-align:middle">
@@ -24,7 +24,8 @@
 		  </td>
         </tr>
       </table>
-      <div id="build" style="border-radius:5px;padding:0px;width:800px;font-size:13px">
+	  <!-- CURRENT BUILD -->
+      <div id="build" style="border-radius:5px;padding:0px;width:90%;font-size:13px">
         <div>
           <table style="padding:0px;border:0px;width:100%;border-spacing:0">
             <thead>
@@ -53,58 +54,17 @@
                 <td colspan="2" style="border:0px;height:20px;width:200px;padding:0px;padding-top:20px;padding-bottom:5px;text-align:right;border-left:1px solid #adadad;border-right:1px solid #adadad;">					
 					<table style="padding:0px;border:0px;width:100%;border-spacing:0">
 						<tbody>
-							
-							<#list ChangeReport.errors as change>
-								<tr style="background-color:#ffdedf;">
-									<td align="left" style="border:0px;color:#808080;padding:0px;height:20px;font-size:12px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
-										<span style="text-decoration:none;font-weight:bold;color:#FF0000;font-size:14px;" >!</span>
-									</td>
-									<td align="left" style="width:100px;border:0px;padding:0px;height:20px;text-decoration:none;font-weight:bold;color:#670C07;padding-bottom:2px;padding-top:2px;padding-left:2px;">
-										<a href="${StoreProject.bts.link}${change.id}" style="text-decoration:none;font-weight:bold;color:#670C07;font-size:14px;">
-											${change.id}
-										</a> 									
-									</td>																																
-									<td align="left" style="width:100px;border:0px;color:#670C07;padding:0px;height:20px;font-size:14px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
-									<#if change.issue??>
-										<strong>${change.issue.resolution!""}</strong>
-									<#else>	
-										<strong></strong>
-									</#if>
-									</td>	
-									<td align="left" style="width:100px;border:0px;color:#808080;padding:0px;height:20px;font-size:12px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
-									<#if change.issue??>
-										${change.issue.assignee!""}
-									<#else>	
-										<strong></strong>
-									</#if>
-									</td>								
-									<td align="left" style="border:0px;color:#808080;padding:0px;height:20px;font-size:12px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
-									<#if change.issue??>
-										${change.issue.summary!""}
-									<#else>	
-										<strong>This is not valid issue id!</strong>
-									</#if>
-									</td>							
-								</tr>
-								<#list change.scmLogs as log>
-								<tr>
-									<td colspan="2" align="left"> </td>
-									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
-										<span style="text-decoration:none;font-size:10px;" >${log.date?datetime?string("dd-MM-yyyy hh:mm")}</span>
-									</td>
-									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
-										<span style="text-decoration:none;font-size:10px;" >${log.user}</span>
-									</td>									
-									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
-										<span style="text-decoration:none;font-size:10px;" >${log.id}: ${log.message}</span>
-									</td>
-								</tr>
-								</#list>
-							</#list>
-							
-							<#list ChangeReport.changes as change>
-							<tr style="background-color:#d7f5d6;">
+							<#list ChangeReport.buildChanges as change>
+								<#if change.error>
+									<tr style="background-color:#ffdedf;">
+								<#else>
+									<tr style="background-color:#d7f5d6;">									
+								</#if>
 								<td align="left" style="border:0px;color:#808080;padding:0px;height:20px;font-size:12px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+								<#if change.error>
+									<span style="text-decoration:none;font-weight:bold;color:#FF0000;font-size:14px;" >!</span>
+								</#if>								
+									
 								</td>							
 								<td align="left" style="width:100px;border:0px;padding:0px;height:20px;text-decoration:none;font-weight:bold;color:#670C07;padding-bottom:2px;padding-top:2px;padding-left:2px;">
 									<a href="${StoreProject.bts.link}${change.id}" style="text-decoration:none;font-weight:bold;color:#670C07;font-size:14px;">
@@ -133,29 +93,27 @@
 									</#if>
 								</td>							
 							</tr>
-								<#list change.scmLogs as log>
+								<#list change.changes as log>
 								<tr>
-									<td colspan="2" align="left"> </td>
-									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
-										<span style="text-decoration:none;font-size:10px;" >${log.date?datetime?string("dd-MM-yyyy hh:mm")}</span>
+									<td colspan="2" align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;"> 
+									<#if log.build??>
+										${log.build.build}
+									<#else>
+										----
+									</#if>
 									</td>
 									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
-										<span style="text-decoration:none;font-size:10px;" >${log.user}</span>
+										<span style="text-decoration:none;font-size:10px;" >${log.scmLog.date?datetime?string("dd-MM-yyyy hh:mm")}</span>
+									</td>
+									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
+										<span style="text-decoration:none;font-size:10px;" >${log.scmLog.user}</span>
 									</td>									
 									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
-										<span style="text-decoration:none;font-size:10px;" >${log.id}: ${log.message}</span>
+										<span style="text-decoration:none;font-size:10px;" >${log.scmLog.id}: ${log.scmLog.message}</span>
 									</td>
 								</tr>
 								</#list>							
 							</#list>
-							<#if ChangeReport.errors?has_content>
-							<tr>
-									<td colspan="5" align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
-										<span style="text-decoration:none;font-weight:bold;color:#FF0000;font-size:14px;" >!</span>
-										<span style="text-decoration:none;color:#FF0000;font-size:10px;" >This issues are not planned for this release!</span>
-									</td>
-							</tr>
-							</#if>
 						</tbody>
 					</table>
 				</td>
@@ -169,8 +127,8 @@
         </div>
       </div>
 
-      <div style="padding-top: 10px; width: 800px">
-        <div style="font-size:12px;text-align:center;vertical-align:middle;height:20px;width:800px">
+      <div style="padding-bottom: 10px;">
+        <div style="font-size:12px;text-align:center;vertical-align:middle;height:20px;width:90%">
           <p style="color:#808080;margin-top:10px;"> 
             <span style="vertical-align:middle">Application release monitor is powered by </span>
 			<a href="http://www.lorislab.org" style="text-decoration:none;">
@@ -179,7 +137,129 @@
           </p>
         </div>
       </div>
+	  
+	  <!-- CHANGES -->
+      <div id="build" style="border-radius:5px;padding:0px;width:90%;font-size:13px">
+        <div>
+          <table style="padding:0px;border:0px;width:100%;border-spacing:0">
+            <thead>
+              <tr style="padding:0px;border:0px;font-weight:700;font-size:18px;background-color:#baecb7;color:#32a32d">
+                <td style="border:0px;width:200px;padding:0px 20px 0px 0px;vertical-align:middle;border-top:1px solid #808080;border-bottom:1px solid #adadad;border-left:1px solid #606060;border-top-left-radius:5px">
+					<span style="display:inline-block;margin-top:12px;vertical-align:middle">
+						<span style="font-weight:bold;color:#32a32d;margin-left:15px;">
+							Changes for release ${StoreBuild.mavenVersion!"x.x.x"}
+						</span>
+					</span>
+					<img height="45" src="${MailConfig.url}/${Mail.template}/arrow-success.png" style="float: right;">
+				</td>
+                <td align="right" style="border:0px;font-weight:normal;font-size:12px;padding:0px 20px 0px 0px;vertical-align:middle;border-top:1px solid #808080;border-bottom:1px solid #adadad;border-right:1px solid #606060;border-top-right-radius:5px">			
+					<span style="vertical-align:middle">${StoreSystem.name}</span>
+				</td>
+              </tr>
+            </thead>
+            <tbody style="margin-bottom:40px">
+              <tr style="padding:0px;border:0px">
+                <td colspan="2" style="border:0px;height:20px;width:200px;padding:0px;padding-top:20px;padding-bottom:5px;text-align:right;border-left:1px solid #adadad;border-right:1px solid #adadad;">					
+					<table style="padding:0px;border:0px;width:100%;border-spacing:0">
+						<tbody>
+						<#list ChangeReport.changes as change>
+								<#if change.error>
+									<tr style="background-color:#ffdedf;">
+								<#elseif change.changes?has_content>
+									<tr style="background-color:#d7f5d6;">
+								<#else>
+									<tr style="background-color:#d7f5d6;">									
+								</#if>
+								<td align="left" style="border:0px;color:#808080;padding:0px;height:20px;font-size:12px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+								<#if change.error>
+									<span style="text-decoration:none;font-weight:bold;color:#FF0000;font-size:14px;" >!</span>
+								<#elseif change.changes?has_content>
+								
+								<#else>
+									<span style="text-decoration:none;font-weight:bold;color:#32a32d;font-size:14px;" >?</span>
+								</#if>								
+									
+								</td>							
+								<td align="left" style="width:100px;border:0px;padding:0px;height:20px;text-decoration:none;font-weight:bold;color:#670C07;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+									<a href="${StoreProject.bts.link}${change.id}" style="text-decoration:none;font-weight:bold;color:#670C07;font-size:14px;">
+										${change.id}
+									</a> 									
+								</td>																																
+								<td align="left" style="width:100px;border:0px;color:#670C07;padding:0px;height:20px;font-size:14px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+									<#if change.issue??>
+										<strong>${change.issue.resolution!""}</strong>
+									<#else>	
+										<strong></strong>
+									</#if>
+								</td>	
+								<td align="left" style="width:100px;border:0px;color:#808080;padding:0px;height:20px;font-size:12px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+									<#if change.issue??>
+										${change.issue.assignee!""}
+									<#else>	
+										<strong></strong>
+									</#if>
+								</td>								
+								<td align="left" style="border:0px;color:#808080;padding:0px;height:20px;font-size:12px;padding-bottom:2px;padding-top:2px;padding-left:2px;">
+									<#if change.issue??>
+										${change.issue.summary!""}
+									<#else>	
+										<strong>This is not valid issue id!</strong>
+									</#if>
+								</td>							
+							</tr>
+								<#list change.changes as log>
+								<tr>
+									<td colspan="2" align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;"> 
+									<#if log.build??>
+										${log.build.build}
+									<#else>
+										----
+									</#if>
+									</td>
+									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
+										<span style="text-decoration:none;font-size:10px;" >${log.scmLog.date?datetime?string("dd-MM-yyyy hh:mm")}</span>
+									</td>
+									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
+										<span style="text-decoration:none;font-size:10px;" >${log.scmLog.user}</span>
+									</td>									
+									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
+										<span style="text-decoration:none;font-size:10px;" >${log.scmLog.id}: ${log.scmLog.message}</span>
+									</td>
+								</tr>
+								</#list>							
+							</#list>
+						</tbody>
+					</table>
+				</td>
+              </tr>
+              <tr style="padding:0px;border:0px">
+                <td colspan="2" style="border:0px;width:100%;height:1px;padding:0px;border-left:1px solid #adadad;border-bottom-left-radius:5px;border-bottom:1px solid #adadad;border-right:1px solid #adadad;border-bottom-right-radius:5px"> 
+				</td>
+              </tr>				
+              </tbody>
+          </table>
+        </div>
+      </div>
 
+      <div style="padding-bottom: 10px;">
+        <div style="font-size:12px;text-align:center;vertical-align:middle;height:20px;width:90%">
+          <p style="color:#808080;margin-top:10px;"> 
+            <span style="vertical-align:middle">Application release monitor is powered by </span>
+			<a href="http://www.lorislab.org" style="text-decoration:none;">
+			<span style="font-weight:bold;color:#32a32d;font-size:14px;text-decoration:none;">lorislab</span><span style="font-weight:bold;color:#000000;font-size:14px;text-decoration:none;">.org</span>
+			</a>
+          </p>
+        </div>
+      </div>
+	  
+	<div align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
+			<span style="text-decoration:none;font-weight:bold;color:#FF0000;font-size:14px;" >!</span>
+			<span style="text-decoration:none;color:#FF0000;font-size:10px;" >This issues are not planned for this release!</span>
+			<span style="text-decoration:none;font-weight:bold;color:#32a32d;font-size:14px;" >?</span>
+			<span style="text-decoration:none;color:#32a32d;font-size:10px;" >No changes found!</span>
+			<span style="text-decoration:none;font-weight:bold;color:#808080;font-size:14px;" >----</span>
+			<span style="text-decoration:none;color:#808080;font-size:10px;" >Change for next build.</span>			
+	</div>	
     </div>
 </body>
 </html>
