--- a/armonitor-web/src/main/resources/templates/buildDeployed/content_en.html
+++ b/armonitor-web/src/main/resources/templates/buildDeployed/content_en.html
@@ -213,7 +213,7 @@
 									<#if log.build??>
 										${log.build.build}
 									<#else>
-										----
+										*
 									</#if>
 									</td>
 									<td align="left" style="border:0px;color:#808080;padding:0px;height:15px;font-size:12px;padding-top:2px;padding-left:2px;">
@@ -257,7 +257,7 @@
 			<span style="text-decoration:none;color:#FF0000;font-size:10px;" >This issues are not planned for this release!</span>
 			<span style="text-decoration:none;font-weight:bold;color:#32a32d;font-size:14px;" >?</span>
 			<span style="text-decoration:none;color:#32a32d;font-size:10px;" >No changes found!</span>
-			<span style="text-decoration:none;font-weight:bold;color:#808080;font-size:14px;" >----</span>
+			<span style="text-decoration:none;font-weight:bold;color:#808080;font-size:14px;" >*</span>
 			<span style="text-decoration:none;color:#808080;font-size:10px;" >Change for next build.</span>			
 	</div>	
     </div>
