--- a/armonitor-web/src/main/resources/templates/buildDeployed/subject_en.html
+++ b/armonitor-web/src/main/resources/templates/buildDeployed/subject_en.html
@@ -1,1 +1,1 @@
-[Deployed] ${StoreApplication.name} was deployed on the ${StoreSystem.name}.
+[Deployed] ${StoreApplication.name} (${StoreBuild.mavenVersion!"?"} ${StoreBuild.build!"?"}) was deployed on the ${StoreSystem.name} system.
