--- a/armonitor-web/src/main/webapp/partials/dashboard.html
+++ b/armonitor-web/src/main/webapp/partials/dashboard.html
@@ -5,7 +5,7 @@
 	<div data-ng-repeat="(ai,a) in p.applications">
 		<h3>{{a.application.name}}</h3>
 			<div data-ng-repeat="(si,s) in a.systems">
-				<pre class="alert" data-ng-class="{ 'alert-success': s.systemBuild!==null, 'alert-warning': s.systemBuild==null}">
+				<pre class="alert" data-ng-class="{ 'alert-success': s.systemBuild!==null, 'alert-warning': s.systemBuild===null}">
 					Name: {{s.system.name}} 
 					Version: {{s.systemBuild.build.mavenVersion}} {{s.systemBuild.build.build}} {{s.systemBuild.build.scm}}  
 					Date: {{s.systemBuild.systemBuild.date | date:'medium' }}
