--- a/armonitor-web/src/main/webapp/partials/dashboard.html
+++ b/armonitor-web/src/main/webapp/partials/dashboard.html
@@ -2,10 +2,13 @@
 <h1>Dashboard
 	<small>Overview
 
-
-		<a href="" style="text-align: right; float: right" data-ng-click="reload()">
+		<a href="" data-ng-show="dashboard" data-ng-click="reload()" style="text-align: right; float: right">
 			<i class="icon-arrows-cw"></i>
-		</a></small></h1>
+			
+		</a>
+		<i data-ng-show="!dashboard" class="icon-arrows-cw animate-spin" style="text-align: right; float: right"></i>
+	</small>
+</h1>
 
 <ol class="breadcrumb">
 	<li class="active">
@@ -18,54 +21,57 @@
 	Welcome to Application release monitor by <a class="alert-link" href="http://www.lorislabr.org">lorislab.org</a> community.
 </div>
 
-<div data-ng-repeat="(pi,p) in getProjects()">
+<div data-ng-show="dashboard">
+	<div data-ng-repeat="(pi,p) in getProjects()">
 
-	<h2>{{p.project.name}}</h2>
-	<div data-ng-repeat="(ai,a) in p.applications">
-		<a href="#/builds" data-ng-click="appBuilds(a)">
-			<h3><i class="icon-beaker"></i> {{a.application.name}}</h3>		
-		</a>
-		<div class="row">
-			<div class="col-lg-4" data-ng-repeat="(si,s) in a.systems">
-				<div class="panel" data-ng-class="{ 'panel-success': s.systemBuild !== null, 'panel-danger': s.systemBuild === null}">
+		<h2>{{p.name}}</h2>
+		<div data-ng-repeat="(ai,a) in p.applications">
+			<a href="#/builds" data-ng-click="appBuilds(a)">
+				<h3><i class="icon-beaker"></i> {{a.name}}</h3>		
+			</a>
+			<div class="row">
+				<div class="col-lg-4" data-ng-repeat="(si,s) in a.systems">
+					<div class="panel" data-ng-class="{ 'panel-success': s.systemBuild !== null, 'panel-danger': s.systemBuild === null}">
 
-					<div class="panel-heading" style="min-height: 140px">
-						<div class="row">
-							<div class="col-xs-8" style="font-size: 25px;">
-								<a href="">
-								{{s.system.name}}
-								</a>
-							</div>
-							<div class="col-xs-4"	style="text-align: right; float: right">
-								<a href="" data-ng-click="updateBuild(s.guid)" data-popover="Refresh" data-popover-placement="top" data-popover-trigger="mouseenter">
-									<i class="icon-arrows-cw"></i>
-								</a>
-							</div>
-						</div>	
-						<div class="row">
-							<div class="col-xs-4">
-								<i style="font-size: 5em;" data-ng-class="{ 'icon-ok': s.systemBuild !== null, 'icon-attention': s.systemBuild === null}"></i>
-							</div>
-							<div class="col-xs-8" style="text-align: right;">
-								<p style="font-size: 20px;">
-									<a  href="#/builds" data-ng-click="builds(a, s.systemBuild.build)">
-										{{s.systemBuild.build.mavenVersion}}
+						<div class="panel-heading" style="min-height: 140px">
+							<div class="row">
+								<div class="col-xs-8" style="font-size: 25px;">
+									<a href="">
+										{{s.name}}
 									</a>
-									<a href="#">
-										{{s.systemBuild.build.build}}  
-									</a>									
-								</p>
-								<p>
-									<i class="icon-fork" style="font-weight: bold"></i>{{s.systemBuild.build.scm}}
-								</p>
-								<p>
-									<i class="icon-clock"></i>{{s.systemBuild.systemBuild.date| date:'medium' }}
-								</p>								
-							</div>
-						</div>						
+								</div>
+								<div class="col-xs-4"	style="text-align: right; float: right">
+									<a href="" data-ng-click="updateBuild(s.guid)" data-ng-show="s.systemBuild" data-popover="Refresh" data-popover-placement="top" data-popover-trigger="mouseenter">
+										<i class="icon-arrows-cw"></i>
+									</a>
+								</div>
+							</div>	
+							<div class="row">
+								<div class="col-xs-4">
+									<i style="font-size: 5em;" data-ng-class="{ 'icon-ok': s.systemBuild !== null, 'icon-attention': s.systemBuild === null}"></i>
+								</div>
+								<div class="col-xs-8" style="text-align: right;">
+									<p style="font-size: 20px;">
+										<a href="{{s.systemBuild.link}}" data-ng-show="s.systemBuild && s.systemBuild.link"><i class="icon-download-cloud"></i></a>
+										<a  href="#/builds" data-ng-click="builds(a, s.systemBuild.version)">
+											{{s.systemBuild.version}}
+										</a>
+										<a href="#/activity/{{s.systemBuild.build}}">
+											{{s.systemBuild.rc}}  
+										</a>									
+									</p>
+									<p>
+										<i class="icon-fork" style="font-weight: bold"></i>{{s.systemBuild.scm}}
+									</p>
+									<p>
+										<i class="icon-clock"></i>{{s.systemBuild.date| date:'medium' }}
+									</p>								
+								</div>
+							</div>						
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</div>	
 </div>
