--- a/armonitor-web/src/main/webapp/css/fontello.css
+++ b/armonitor-web/src/main/webapp/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?75425269');
-  src: url('../font/fontello.eot?75425269#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?75425269') format('woff'),
-       url('../font/fontello.ttf?75425269') format('truetype'),
-       url('../font/fontello.svg?75425269#fontello') format('svg');
+  src: url('../font/fontello.eot?46153114');
+  src: url('../font/fontello.eot?46153114#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?46153114') format('woff'),
+       url('../font/fontello.ttf?46153114') format('truetype'),
+       url('../font/fontello.svg?46153114#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?75425269#fontello') format('svg');
+    src: url('../font/fontello.svg?46153114#fontello') format('svg');
   }
 }
 */
@@ -51,14 +51,12 @@
 }
  
 .icon-ok:before { content: '\e801'; } /* '' */
-.icon-gauge:before { content: '\e805'; } /* '' */
-.icon-code:before { content: '\e804'; } /* '' */
+.icon-download-cloud:before { content: '\e80c'; } /* '' */
 .icon-attention:before { content: '\e802'; } /* '' */
-.icon-location:before { content: '\e807'; } /* '' */
 .icon-clock:before { content: '\e803'; } /* '' */
-.icon-info-circled:before { content: '\e806'; } /* '' */
+.icon-right-circled:before { content: '\e800'; } /* '' */
 .icon-arrows-cw:before { content: '\e808'; } /* '' */
 .icon-fork:before { content: '\e809'; } /* '' */
 .icon-rocket:before { content: '\e80a'; } /* '' */
 .icon-beaker:before { content: '\e80b'; } /* '' */
-.icon-right-circled:before { content: '\e800'; } /* '' */
+.icon-gauge:before { content: '\e805'; } /* '' */
