--- a/armonitor-web/src/main/webapp/partials/dashboard.html
+++ b/armonitor-web/src/main/webapp/partials/dashboard.html
@@ -26,7 +26,7 @@
 
 		<h2>{{p.name}}</h2>
 		<div data-ng-repeat="(ai,a) in p.applications">
-			<a href="#/builds" data-ng-click="appBuilds(a)">
+			<a href="#/appbuild/{{a.guid}}">
 				<h3><i class="icon-beaker"></i> {{a.name}}</h3>		
 			</a>
 			<div class="row">
@@ -36,7 +36,7 @@
 						<div class="panel-heading" style="min-height: 140px">
 							<div class="row">
 								<div class="col-xs-8" style="font-size: 25px;">
-									<a href="">
+									<a href="#/systembuild/{{s.guid}}">
 										{{s.name}}
 									</a>
 								</div>
@@ -53,7 +53,7 @@
 								<div class="col-xs-8" style="text-align: right;">
 									<p style="font-size: 20px;">
 										<a href="{{s.systemBuild.link}}" data-ng-show="s.systemBuild && s.systemBuild.link"><i class="icon-download-cloud"></i></a>
-										<a  href="#/builds" data-ng-click="builds(a, s.systemBuild.version)">
+										<a  href="#/versionbuild/{{a.guid}}/{{s.systemBuild.version}}">
 											{{s.systemBuild.version}}
 										</a>
 										<a href="#/activity/{{s.systemBuild.build}}">
