--- a/armonitor-web/src/main/webapp/partials/systembuild.html
+++ b/armonitor-web/src/main/webapp/partials/systembuild.html
@@ -17,7 +17,7 @@
 <div class="panel panel-default">
 	<div class="panel-heading">System builds <a style="text-align: right; float: right" data-ng-click="reload()"><i class="icon-arrows-cw"></i></a></div>
 	<div class="panel-body" style="padding: 0px !important;">
-		<div data-timeline="system.builds" data-timeline-options="options" ></div>
+		<div data-timeline="system.builds" data-timeline-options="{'width': '100%','height': 'auto','groupsOrder': true,'editable': false}" ></div>
 	</div>
 </div>
 
