--- a/armonitor-web/src/main/webapp/css/fontello.css
+++ b/armonitor-web/src/main/webapp/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?94395127');
-  src: url('../font/fontello.eot?94395127#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?94395127') format('woff'),
-       url('../font/fontello.ttf?94395127') format('truetype'),
-       url('../font/fontello.svg?94395127#fontello') format('svg');
+  src: url('../font/fontello.eot?99809672');
+  src: url('../font/fontello.eot?99809672#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?99809672') format('woff'),
+       url('../font/fontello.ttf?99809672') format('truetype'),
+       url('../font/fontello.svg?99809672#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?94395127#fontello') format('svg');
+    src: url('../font/fontello.svg?99809672#fontello') format('svg');
   }
 }
 */
@@ -50,15 +50,20 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-ok:before { content: '\e801'; } /* '' */
+.icon-user:before { content: '\e807'; } /* '' */
 .icon-gauge:before { content: '\e805'; } /* '' */
+.icon-link-ext:before { content: '\e804'; } /* '' */
 .icon-link-ext-alt:before { content: '\e806'; } /* '' */
+.icon-lock:before { content: '\e80d'; } /* '' */
 .icon-download-cloud:before { content: '\e80c'; } /* '' */
 .icon-attention:before { content: '\e802'; } /* '' */
+.icon-cog-alt:before { content: '\e810'; } /* '' */
+.icon-ok:before { content: '\e801'; } /* '' */
+.icon-logout:before { content: '\e80f'; } /* '' */
 .icon-clock:before { content: '\e803'; } /* '' */
-.icon-link-ext:before { content: '\e804'; } /* '' */
+.icon-right-circled:before { content: '\e800'; } /* '' */
 .icon-arrows-cw:before { content: '\e808'; } /* '' */
 .icon-fork:before { content: '\e809'; } /* '' */
 .icon-rocket:before { content: '\e80a'; } /* '' */
 .icon-beaker:before { content: '\e80b'; } /* '' */
-.icon-right-circled:before { content: '\e800'; } /* '' */
+.icon-login:before { content: '\e80e'; } /* '' */
